--- a/css/style.css
+++ b/css/style.css
@@ -225,11 +225,11 @@ header .site-title {
   margin-bottom: 30px;
 }
 
-#footer {
+footer {
   margin-top: 180px;
 }
 
-#footer li {
+footer li {
   margin-right: 30px;
 }
 
@@ -268,11 +268,11 @@ iframe {
   padding-top: 15px;
 }
 
-#footer {
+footer {
   margin-top: 180px;
 }
 
-#footer li {
+footer li {
   margin-right: 30px;
 }
 
@@ -311,7 +311,7 @@ iframe {
   padding-left: 10px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 599px) {
   .pc-menu {
     display: none;
   }
@@ -329,10 +329,16 @@ iframe {
     width: 100%;
   }
   iframe {
-    width: 420px;
-    height: 150px;
+    width: 100%;
+    height: 250px;
   }
-  #footer {
+  footer {
     margin-top: 120px;
+  }
+  .footer-menu {
+    flex-direction: column;
+  }
+  .footer-menu p {
+    margin: 10px 30px;
   }
 }
