--- a/css/style.scss
+++ b/css/style.scss
@@ -234,7 +234,7 @@ header {
   }
 }
 
-#footer {
+footer {
   margin-top: 180px;
 
   li {
@@ -278,7 +278,7 @@ iframe {
   padding-top: 15px;
 }
 
-#footer {
+footer {
   margin-top: 180px;
 
   li {
@@ -323,7 +323,7 @@ iframe {
 }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 599px) {
   .pc-menu {
     display: none;
   }
@@ -346,11 +346,18 @@ iframe {
   }
 
   iframe {
-    width: 420px;
-    height: 150px;
+    width: 100%;
+    height: 250px;
   }
 
-  #footer {
+  footer {
     margin-top: 120px;
   }
+  .footer-menu {
+    flex-direction: column;
+    p {
+      margin: 10px 30px;
+    }
+  }
+
 }
